--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <div class="container">
             <div class="hero-content">
                 <h1 class="hero-title">Lessons and insights from 8 years</h1>
-                <p class="hero-subtitle">Where to grow your business as a photographer: site or social media?</p>
+                <p class="hero-subtitle">Where strategy meets execution to create lasting impact and measurable business success</p>
                 <button class="btn">
                     Register
                 </button>
